[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grdl-imagej"
version = "0.1.0"
description = "ImageJ/Fiji algorithm ports for the GRDL framework — 22 classic image processing algorithms as pure-NumPy reimplementations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Steven Siebert"},
    {name = "Jason Fritz"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

dependencies = [
    "grdl>=0.1.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/geoint-org/grdl-imagej"

[tool.setuptools.packages.find]
include = ["grdl_imagej*"]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"
testpaths = ["tests"]
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
